First draft. Tested with curl. JUnits prepared

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.application.name=service
+spring.application.name=batchprocessorservice
+logging.level.com.job.lab.batchprocessor=DEBUG
+
+# H2 database config
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+
+# Run custom schema manually
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema-h2.sql
+
+# Make sure batch doesn?t try auto again
+spring.batch.jdbc.initialize-schema=never
+
+# Optional: verify schema init on startup
+spring.sql.init.continue-on-error=false
+
+
+# Enable H2 console for debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
